--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
   <body>
     <div id="root"></div>
-    <!-- Main application script, to be transpiled by Babel -->
-    <script type="text/babel" data-presets="react,typescript" src="./index.tsx"></script>
+    <!-- Main application script, to be transpiled by Babel as a module -->
+    <script type="text/babel" data-type="module" data-presets="react,typescript" src="./index.tsx"></script>
   </body>
 </html>
